fix: обнаружен баг: Scrollbar для клонки ломает dnd-kit между колонками

--- a/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
+++ b/task5/src/modules/KanbanPage/components/task-card/task-card.module.css
@@ -8,7 +8,8 @@
    display: flex;
    flex-direction: column;
    gap: 0.75rem;
-   z-index: 1;
+   z-index: 20;
+   margin-bottom: .6rem;
 
    h3 {
       font-weight: bold;
